<resources>
    <string name="app_name">Kastha</string>
    <string name="project_title">Furniture Shopping Mobile Application with Augmented Reality</string>
    <string name="onboarding_user">Onboarding User</string>
    <string name="onboarding_slogan">Visualize your\nLiving Space</string>
    <string name="create_an_account">Create An Account</string>
    <string name="sign_in">Sign In</string>
    <string name="vector_image">Vector Image</string>
    <string name="back">Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="please_sign_in_to_continue">Please Sign In to continue</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="customer">Customer</string>
    <string name="trader">Trader</string>
    <string name="create_an_account_to_get_started">Create an Account to Get Started</string>
    <string name="user_details">User Details</string>
    <string name="store_details">Store Details</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="store_name">Store Name</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="provide_email_address_for_verification">Provide email address for verification</string>
    <string name="verify">Verify</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="confirm">Confirm</string>
    <string name="create_a_new_password_for_your_account">Create a new password for your account</string>
    <string name="didn_t_receive_a_code">Didn\'t receive a code?</string>
    <string name="resend">Resend</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="discover">Discover</string>
    <string name="favourites">Favourites</string>
    <string name="image_view">Image View</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="ar">AR</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="favourite">Favourite</string>
    <string name="checkout">Checkout</string>
    <string name="total_rs">Total: Rs.</string>
    <string name="try_searching_again_using_a_different_spelling_or_keyword">Try searching again using a different spelling or keyword</string>
    <string name="couldn_t_find">Couldn\'t find</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="low_stock">Low Stock</string>
    <string name="reviews">Reviews</string>
    <string name="this_product_has_no_reviews">This product has no reviews</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="ar_view">AR View</string>
    <string name="gender">Gender</string>
    <string name="services">Services</string>
    <string name="account_information">Account Information</string>
    <string name="policies">Policies</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="please_check_back_later_for_more_products">Please check back later for more products</string>
    <string name="we_are_currently_updating_our_inventory">We are currently updating our inventory</string>
    <string name="go_to_home_page">Go to Home Page</string>
    <string name="start_adding_products_to_easily_access_them_later">Start adding products to easily access them later.</string>
    <string name="your_favourites_list_is_empty">Your favourites list is empty.</string>
    <string name="uh_oh_your_cart_is_empty">Uh-oh! Your cart is empty</string>
    <string name="continue_shopping_by_adding_items_to_your_cart">Continue Shopping by adding items to your cart.</string>
    <string name="there_are_no_reviews">There are no reviews</string>
    <string name="be_the_first_one_to_review_this_product">Be the first one to review this product</string>
    <string name="remove">Remove</string>
    <string name="add_products_for_users_to_shop">Add products for users to shop</string>
    <string name="add_product">Add Product</string>
    <string name="price">Price</string>
    <string name="stock_quantity">Stock Quantity</string>
    <string name="category">Category</string>
    <string name="select_images">Select Images</string>
    <string name="select_3d_model">Select 3D Model</string>
    <string name="administrator_features">Administrator Features</string>
    <string name="chat_with_customers">Chat with Customers</string>
    <string name="chat_with_us">Chat with Us</string>
    <string name="chat">Chat</string>
    <string name="profile_image">Profile Image</string>
    <string name="information">Information</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="add_image">Add Image</string>
    <string name="message">Message...</string>
    <string name="send">Send</string>
    <string name="select_image">Select Image</string>
    <string name="audio_record">Audio Record</string>
    <string name="chatimage">ChatImage</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="action_cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="update_your_personal_details">Update your personal details</string>
    <string name="new_password_optional">New Password (Optional)</string>
    <string name="re_new_password_optional">Re-New Password (Optional)</string>
    <string name="provide_your_feedback">Provide your feedback</string>
    <string name="review">Review</string>
    <string name="submit">Submit</string>
    <string name="star">Star</string>
    <string name="add_review">Add Review</string>
    <string name="enter_your_one_time_password">Enter your one time password</string>
    <string name="new_messages_will_be_displayed_once_the_customer_reaches_you_out">New messages will be displayed once the customer reaches you out</string>
    <string name="there_are_no_messages_yet">There are no messages yet.</string>
    <string name="new_chat_will_be_loaded_once_you_re_connected_to_a_network">New chat will be loaded once you\'re connected to a network.</string>
    <string name="change_details_to_keep_product_up_to_date">Change details to keep product up-to-date</string>
    <string name="update_product">Update Product</string>
    <string name="all_products">All Products</string>
    <string name="there_are_no_products_yet">There are no products yet.</string>
    <string name="add_products_for_your_customer_s_to_buy">Add products for your customer\'s to buy</string>
    <string name="go_to_add_product">Go to Add Product</string>
</resources>