<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="@font/outfit_regular"
            android:textSize="64sp"
            android:layout_margin="@dimen/dp_24"
            android:textColor="?attr/colorOnBackground"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tvSlogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_slogan"

            android:fontFamily="@font/titillium_regular"
            android:textSize="48sp"
            android:textColor="?attr/colorSecondary"
            android:textAlignment="textEnd"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            app:layout_constraintBottom_toTopOf="@id/icOnboardingUser"
            android:layout_marginEnd="@dimen/dp_24"
            />

        <ImageView
            android:id="@+id/icOnboardingUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/onboarding_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/onboarding_user" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            style="@style/PrimaryMaterialButtonStyle"

            android:layout_marginBottom="@dimen/dp_16"
            android:layout_marginHorizontal="@dimen/dp_24"
            android:text="@string/sign_in"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnCreateAccount"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            style="@style/WhiteMaterialButtonStyle"

            android:text="@string/create_an_account"
            android:layout_marginBottom="@dimen/dp_24"
            android:layout_marginHorizontal="@dimen/dp_24"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>