<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"
            android:layout_margin="@dimen/dp_12"
            android:contentDescription="@string/back"
            android:padding="@dimen/dp_12"
            android:src="@drawable/ic_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnBackground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnBack">

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="@font/outfit_regular"
                android:text="@string/app_name"

                android:textSize="32sp" />

            <TextView
                android:id="@+id/tvLayoutDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="@font/titillium_light"
                android:text="@string/enter_your_one_time_password"
                android:textColor="?attr/surface_grey" />

            <com.otpview.OTPTextView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_16"

                android:textColor="?attr/colorPrimary"
                app:box_margin="@dimen/dp_4"
                app:height="@dimen/dp_56"
                app:hide_otp_drawable="@drawable/bg_otp_box_hide"
                app:length="6"

                app:otp_box_background_active="@drawable/bg_otp_box_active"
                app:otp_box_background_error="@drawable/bg_otp_box_error"

                app:otp_box_background_inactive="@drawable/bg_otp_box_inactive"
                app:otp_box_background_success="@drawable/bg_otp_box_success"
                app:otp_text_size="20sp"

                app:width="@dimen/dp_48" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnVerify"
                style="@style/PrimaryMaterialButtonStyle"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_8"
                android:enabled="false"
                android:text="@string/verify"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="@dimen/dp_24"

            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/titillium_regular"
                android:text="@string/didn_t_receive_a_code" />

            <TextView
                android:id="@+id/btnResend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/titillium_medium"
                android:padding="@dimen/dp_4"
                android:text="@string/resend"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>