<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.search.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/search"
        app:backgroundTint="?attr/material3Surface"
        app:layout_anchor="@id/searchBar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSearchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/llInvalidContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/titillium_medium"
                android:text="@string/couldn_t_find"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvSearchValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/titillium_medium"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit_regular"
                android:text="@string/try_searching_again_using_a_different_spelling_or_keyword"
                android:textColor="?attr/surface_grey"
                android:textSize="12sp" />

        </LinearLayout>

    </com.google.android.material.search.SearchView>
</layout>