<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvCategoryImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeWidth="0dp">

                <ImageView
                    android:id="@+id/ivCategoryImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_view"
                    android:foreground="@color/dark_overlay"
                    android:scaleType="centerCrop"
                    android:src="@drawable/living_room_rafiki" />

                <TextView
                    android:id="@+id/tvCategoryTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/outfit_medium"
                    android:text="Bed"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

            </com.google.android.material.card.MaterialCardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCategoryProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvCategoryImage"
                app:layout_constraintVertical_bias="0"

                tools:itemCount="10"
                tools:listitem="@layout/item_product_horizontal" />

            <LinearLayout
                android:id="@+id/llEmptyView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_16"

                android:layout_marginTop="@dimen/dp_16"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvCategoryImage">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/outfit_regular"
                    android:text="@string/we_are_currently_updating_our_inventory"

                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:layout_marginBottom="@dimen/dp_4"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/titillium_regular"
                    android:text="@string/please_check_back_later_for_more_products"

                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:layout_marginBottom="@dimen/dp_8"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnHomeFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/go_to_home_page"
                    android:fontFamily="@font/titillium_regular"
                    />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>